Working HuggingFace's GPT2 pipeline into LangChain

--- a/langchain.ipynb
+++ b/langchain.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVfFG5hRmDgK8fzUrKlYN4",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPZOQ7ZOs+Y0cg27+/S/0AJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,32 +30,144 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "g05DEDHOkcgb",
-        "outputId": "a8e81b8e-7026-4697-8232-fece7ed218f5",
+        "id": "g05DEDHOkcgb"
+      },
+      "outputs": [],
+      "source": [
+        "!pip install -qU langchain\n",
+        "!pip install transformers\n",
+        "!pip install sentencepiece\n",
+        "!pip install accelerate"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -qU huggingface_hub"
+      ],
+      "metadata": {
+        "id": "CR_Px5WOkgKk"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.llms import HuggingFacePipeline\n",
+        "from langchain import PromptTemplate, LLMChain\n",
+        "\n",
+        "from transformers import AutoModelWithLMHead, AutoModelForCausalLM, AutoTokenizer, pipeline, T5Model"
+      ],
+      "metadata": {
+        "id": "s_fGtgfh5qC3"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_id = \"gpt2\"\n",
+        "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+        "model = AutoModelForCausalLM.from_pretrained(model_id)\n",
+        "pipe = pipeline(\n",
+        "    \"text-generation\", model=model, tokenizer=tokenizer, max_new_tokens=100\n",
+        ")\n",
+        "hf = HuggingFacePipeline(pipeline=pipe)"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DS_Po2Mm6LHF",
+        "outputId": "6da65503-92f0-43a3-8dd6-ebb3eb5b1294"
       },
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "Hello World\n"
+            "Xformers is not installed correctly. If you want to use memorry_efficient_attention to accelerate training use the following command to install Xformers\n",
+            "pip install xformers.\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "print('Hello World')"
+        "template = \"\"\"\n",
+        "Question: {question}\n",
+        "\n",
+        "Answer:\n",
+        "\"\"\"\n",
+        "\n",
+        "prompt = PromptTemplate(template=template, input_variables=[\"question\"])\n",
+        "llm_chain = LLMChain(prompt=prompt, llm=hf)"
+      ],
+      "metadata": {
+        "id": "ZpnOLDES6fG6"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "question = \"What is the NFL team to win the 2010 season?\""
+      ],
+      "metadata": {
+        "id": "G47WfPl6Au7y"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "llm_chain.run(question)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "id": "ZUAEtvoPAy4U",
+        "outputId": "d00e60b8-422a-4353-8768-49c3bfcfb794"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nThe New Orleans Saints are 6-3-1 but they are 2-0 on home run night this past week Sym: \"I think that we\\'ve got to just go out there and work, try things and see what we can do. But as a team, it\\'s hard as a team to lose a home game and our way to lose is to come out and be real committed and take care of things.\"\\n\\n2. Cleveland Browns and Detroit Lions (tie)\\n\\nOpp'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
       ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CR_Px5WOkgKk"
+        "id": "wB4XhjfmAz0B"
       },
       "execution_count": null,
       "outputs": []
